src/test/ui/rfc-2126-extern-in-paths/non-existent-2.stderr
error[E0433]: failed to resolve. Could not find `xcrate` in `extern`
  --> $DIR/non-existent-2.rs:14:21
   |
LL |     let s = extern::xcrate::S;
   |                     ^^^^^^ Could not find `xcrate` in `extern`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
