src/test/ui/rfc-2126-extern-in-paths/non-existent-2.rs
#![feature(extern_in_paths)]

fn main() {
    let s = extern::xcrate::S; //~ ERROR can't find crate for `xcrate`
}
